--- a/index.html
+++ b/index.html
@@ -2,3 +2,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="css/index.css">
 </head>
+
+<body>
+    Lauren's website
+</body>
